# our-pipe

./: .gitignore  Cargo.toml  README.md  build.rs
src/: app.rs  downloader.rs  main.rs  utils.rs
ui/: app-window.slint
