[package]
name = "our-pipe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
rfd = "0.15.3"
slint = "1.8.0"
tokio = { version = "1.45.1", features = ["full"] }
yt-dlp = "1.3.4"

[build-dependencies]
slint-build = "1.8.0"
